# borre

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENCE  Pipfile  README.md  SECURITY.md  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml  quality.yml
api/: __init__.py  main.py
api/tests/: test_api.py
bore/: __init__.py  constants.py  dice.py  game.py  main.py  player.py  utils.py
bore-game-0.1.0/: setup.py
bore/tests/: test_dice.py
bore_game/: __init__.py  constants.py  dice.py  game.py  imperative.py  main.py  parametres.py  party.py  utils.py
borre/: __init__.py  dice.py  main.py  parametres.py  party.py  player.py  score.py
client/: index.html
examples/: main.py
scripts/: build.sh  check.sh  clean.sh  format.sh  lint.sh  test.sh
tests/: test_bore.py  test_bore_version.py  test_borre.py  test_dice.py  test_party.py  test_player.py  test_score.py  test_set.py  test_version.py
tests/test_game/: test_dice_game.py
