[tool.poetry]
name = "bore-game"
version = "0.1.1-alpha"
description = "Bore is a dead simple Dice game"
authors = ["Youness Id bakkasse <std.youness@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://github.com/younessidbakkasse/bore"
keywords = [
  "dice game",
  "game",
  "dice"
]

[tool.poetry.scripts]
game = "bore_game.main:game"
example = "examples.main:main"

[tool.poetry.dependencies]
python = ">=3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
mypy = "^0.920"
tox = "^3.24.4"

[tool.poetry.urls]
bug-tracker = "https://github.com/younessidbakkasse/bore/issues"
home-page = "https://github.com/younessidbakkasse/bore"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
