[tool.poetry]
name = "borre"
version = "0.1.2"
description = "Borre is a dead simple Dice game maker"
authors = ["Youness Id bakkasse <hi@younessidbakkasse.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://github.com/younessidbakkasse/borre"
keywords = [
  "dice game",
  "game",
  "dice",
  "game maker",
]

[tool.poetry.scripts]
game = "borre.main:game"
example = "examples.main:main"

[tool.poetry.dependencies]
python = ">=3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
mypy = "^0.920"
tox = "^3.24.4"

[tool.poetry.urls]
bug-tracker = "https://github.com/younessidbakkasse/borre/issues"
home-page = "https://github.com/younessidbakkasse/borre"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
